--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-pypdf2
-requests
-reportlab
-pillow
+#need to install zlib1g-dev libxml2 libxml2-dev libxslt-dev build-essential python-dev
+Pillow==2.6.1
+PyPDF2==1.23
+argparse==1.2.1
+cssselect==0.9.1
+lxml==3.4.0
+reportlab==3.1.8
+requests==2.4.3
+wsgiref==0.1.2
