--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -34,7 +34,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Generate Collection ${{ matrix.collection }}
-        run: python your_script_name.py --collection ${{ matrix.collection }}
+        run: python dbmultiverse.py ${{ matrix.collection }}
 
       - name: Upload Collection ${{ matrix.collection }} to GitHub Artifacts
         uses: actions/upload-artifact@v2
